fix visible

--- a/client/src/components/chat/components/Room/ChatBody/ChatBody.module.scss
+++ b/client/src/components/chat/components/Room/ChatBody/ChatBody.module.scss
@@ -12,6 +12,9 @@
     @media (max-width:776px) {
         padding: calc(var(--index) * 1.2) 0;
     }
+    @media (max-width:576px) {
+        padding: calc(var(--index) * 1.7) 0;
+    }
 
     &_button{
         font-size: clamp(14px,calc(var(--index)),18px);
@@ -141,6 +144,9 @@
         margin-bottom: 5px;
         justify-content: end;
 
+        @media (max-width:576px){
+            margin-bottom: 0px;
+        }
     }
 
     &_marginTop{
@@ -199,15 +205,15 @@
         align-items: end;   
     }
 
-    &_img{
+    &_img,&_margin{
         position: relative;
         display: flex;
         justify-content: center;
         align-items: center;
         width: calc(var(--index) * 1.5);
         height: calc(var(--index) * 1.5);
-        min-width: 35px;
-        min-height: 35px;
+        min-width: 32px;
+        min-height: 32px;
         margin-left: calc(var(--index) * 0.5);
         border-radius: 50%;
         background: radial-gradient(circle, rgba(29,29,29) 40%, rgba(117, 12, 38, 0.644) 100%);
@@ -220,9 +226,6 @@
     }
 
     &_margin{
-        width: calc(var(--index) * 1.5);
-        height: calc(var(--index) * 1.5);
-        margin-left: calc(var(--index) * 0.5);
         background: none;
     }
 
