--- a/client/src/components/chat/components/Room/InputBlock/InputBlock.module.scss
+++ b/client/src/components/chat/components/Room/InputBlock/InputBlock.module.scss
@@ -20,12 +20,12 @@
     &_input{
         box-sizing: border-box;
         position: relative;
-        font-size: clamp(12px, var(--index) * 0.8, 18px);
+        font-size: clamp(18px, var(--index) * 1, 22px);
         font-weight: 500;
         line-height: normal;
         color: var(--main_text);
         min-height: var(--input_height);
-        padding: var(--input_padding_top) var(--input_padding_right) var(--input_padding_top) calc(var(--index) * 2);
+        padding: var(--input_padding_top) var(--input_padding_right) var(--input_padding_top) calc(var(--index) * 3);
         background-color: rgb(75, 77, 77);
         border: none;
         border-radius: 13px;
@@ -60,7 +60,7 @@
             align-items: center;
             font-size: calc(var(--index) * 0.8);
             font-weight: 400;
-            height:  var(--input_height);
+            height:100%;
             padding: 0 var(--input_padding_right);
             margin-left: calc(var(--index) * 0.5);
             border: none;
@@ -69,8 +69,7 @@
             transition: all 0.2s;
 
             & svg{
-                width: calc(var(--index) * 0.8);
-                height: calc(var(--index) * 0.8);
+                height: 70%;
                 fill: rgb(202, 208, 214);
             }
 
@@ -89,7 +88,7 @@
             left: calc(var(--index) / 2);
             display: flex;
             align-items: center;
-            height:  var(--input_height);
+            height: 100%;
             background: none;
             padding: 0 5px 0 0;
             border: none;
@@ -105,8 +104,7 @@
             }    
 
             & svg{
-                width: calc(var(--input_height) * 1);
-                height: calc(var(--input_height) * 1);
+                height: 100%;
             }
         }   
     }
